[refactor] 게시글 수정시 동일한 항목이 여러개 생기는 것을 수정한다. (#63)
* refactor: orphan remove 추가

* refactor: 새로운 리스트를 주입하기보다는 이미 존재하는 List를 컨트롤 하는 방식을 선택

* test: 잘못 작성했던 Test 수정