@@ -6,6 +6,7 @@ import jakarta.persistence.CascadeType;
 import jakarta.persistence.Embeddable;
 import jakarta.persistence.OneToMany;
 import java.util.List;
+import java.util.stream.Collectors;
 import kr.co.conceptbe.branch.domain.Branch;
 import kr.co.conceptbe.idea.domain.Idea;
 import kr.co.conceptbe.idea.domain.IdeaBranch;
@@ -19,7 +20,11 @@ public class IdeaBranches {
 
     private static final int IDEA_BRANCHES_SIZE_LOWER_BOUND_INCLUSIVE = 1;
 
-    @OneToMany(mappedBy = "idea", cascade = {CascadeType.PERSIST, CascadeType.REMOVE})
+    @OneToMany(
+        mappedBy = "idea",
+        orphanRemoval = true,
+        cascade = {CascadeType.PERSIST, CascadeType.REMOVE}
+    )
     private List<IdeaBranch> ideaBranches;
 
     private IdeaBranches(List<IdeaBranch> ideaBranches) {
@@ -31,9 +36,17 @@ public class IdeaBranches {
 
         List<IdeaBranch> ideaBranches = branches.stream()
             .map(branch -> IdeaBranch.of(idea, branch))
-            .toList();
+            .collect(Collectors.toList());
 
         return new IdeaBranches(ideaBranches);
+    }
+
+    public void update(Idea idea, List<Branch> branches) {
+        validateSize(branches);
+        ideaBranches.clear();
+        ideaBranches.addAll(branches.stream()
+            .map(branch -> IdeaBranch.of(idea, branch))
+            .collect(Collectors.toList()));
     }
 
     private static void validateSize(List<Branch> branches) {
