@@ -7,6 +7,7 @@ import jakarta.persistence.CascadeType;
 import jakarta.persistence.Embeddable;
 import jakarta.persistence.OneToMany;
 import java.util.List;
+import java.util.stream.Collectors;
 import kr.co.conceptbe.idea.domain.Idea;
 import kr.co.conceptbe.idea.domain.IdeaPurpose;
 import kr.co.conceptbe.purpose.domain.Purpose;
@@ -20,7 +21,11 @@ public class IdeaPurposes {
 
     private static final int IDEA_PURPOSES_SIZE_LOWER_BOUND_INCLUSIVE = 1;
 
-    @OneToMany(mappedBy = "idea", cascade = {CascadeType.PERSIST, CascadeType.REMOVE})
+    @OneToMany(
+        mappedBy = "idea",
+        orphanRemoval = true,
+        cascade = {CascadeType.PERSIST, CascadeType.REMOVE}
+    )
     private List<IdeaPurpose> ideaPurposes;
 
     private IdeaPurposes(List<IdeaPurpose> ideaPurposes) {
@@ -32,9 +37,17 @@ public class IdeaPurposes {
 
         List<IdeaPurpose> ideaPurposes = purposes.stream()
             .map(purpose -> IdeaPurpose.of(idea, purpose))
-            .toList();
+            .collect(Collectors.toList());
 
         return new IdeaPurposes(ideaPurposes);
+    }
+
+    public void update(Idea idea, List<Purpose> purposes) {
+        validateSize(purposes);
+        ideaPurposes.clear();
+        ideaPurposes.addAll(purposes.stream()
+            .map(purpose -> IdeaPurpose.of(idea, purpose))
+            .collect(Collectors.toList()));
     }
 
     private static void validateSize(List<Purpose> purposes) {
