@@ -6,6 +6,7 @@ import jakarta.persistence.CascadeType;
 import jakarta.persistence.Embeddable;
 import jakarta.persistence.OneToMany;
 import java.util.List;
+import java.util.stream.Collectors;
 import kr.co.conceptbe.idea.domain.Idea;
 import kr.co.conceptbe.idea.domain.IdeaSkillCategory;
 import kr.co.conceptbe.skill.domain.SkillCategory;
@@ -19,7 +20,11 @@ public class IdeaSkillCategories {
 
     private static final int IDEA_SKILL_CATEGORIES_SIZE_UPPER_BOUND_INCLUSIVE = 10;
 
-    @OneToMany(mappedBy = "idea", cascade = {CascadeType.PERSIST, CascadeType.REMOVE})
+    @OneToMany(
+        mappedBy = "idea",
+        orphanRemoval = true,
+        cascade = {CascadeType.PERSIST, CascadeType.REMOVE}
+    )
     private List<IdeaSkillCategory> ideaSkillCategories;
 
     private IdeaSkillCategories(List<IdeaSkillCategory> ideaSkillCategories) {
@@ -31,9 +36,17 @@ public class IdeaSkillCategories {
 
         List<IdeaSkillCategory> ideaSkillCategories = skillCategories.stream()
             .map(skillCategory -> IdeaSkillCategory.of(idea, skillCategory))
-            .toList();
+            .collect(Collectors.toList());
 
         return new IdeaSkillCategories(ideaSkillCategories);
+    }
+
+    public void update(Idea idea, List<SkillCategory> skillCategories) {
+        validateSize(skillCategories);
+        ideaSkillCategories.clear();
+        ideaSkillCategories.addAll(skillCategories.stream()
+            .map(skillCategory -> IdeaSkillCategory.of(idea, skillCategory))
+            .collect(Collectors.toList()));
     }
 
     private static void validateSize(List<SkillCategory> skillCategories) {
